--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 
 #content{
     display: grid;
-    grid-template-columns: repeat(4 1fr);
+    grid-template-columns: 1fr repeat(3, 2fr);
     grid-template-rows: 1fr 2fr 2fr;
 }
 
