--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@300&display=swap');
 
+:root{
+    --title-margin: 12px;
+}
+
 body{
     height: 100vh;
     margin: 0;
@@ -129,6 +133,9 @@ header{
     grid-row: 2 / 4;
     overflow: scroll;
     overflow: auto;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 24px;
 }
 
 #project-container h3{
@@ -136,7 +143,9 @@ header{
     margin-bottom: 12px;
 }
 #project-container h2{
-    margin-left: 36px;
+    margin: 0;
+    margin: var(--title-margin);
+    font-size: 24px;
 }
 
 #projects{
@@ -146,7 +155,6 @@ header{
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-template-rows: repeat(3, 200px);
     gap: 24px;
-    margin: 24px;
 }
 
 #projects div{
@@ -169,17 +177,14 @@ header{
     padding-right: 24px;
     padding-bottom: 24px;
 
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 5fr;
-    place-content: center;
-    align-items: center;
 }
 
 #announcements h2{
     margin: 0;
-    margin-left: 16px;
+    margin: var(--title-margin);
+    font-size: 24px;
 }
+
 #announcements h4{
     margin: 0;
 }
@@ -188,7 +193,6 @@ header{
     background-color: white;
     border-radius: 25px;
     padding: 24px;
-    margin-top: 7px;
     font-size: small;
 }
 
@@ -205,7 +209,34 @@ hr{
     grid-column: 4 / 5;
     grid-row: 3 / 4;
     border: 1px solid black; /*debugging */
+
+    background-color: #e2e8f0;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 24px;
 }
+
+#trending h2{
+    margin: 0;
+    margin: var(--title-margin);
+    font-size: 24px;
+}
+
+#trending h6{
+    margin: 0;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+#trending img{
+    margin: 0;
+    margin: 8px;
+    width: 50px;
+    height: 50px;
+}
+
+
+
 
 /* Nav styling */
 
